--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,26 @@
 ::-webkit-scrollbar-corner {
   display: none;
 }
+
+
+.fade-in-element {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+}
+
+.fade-in-element.show {
+  opacity: 1 !important;
+  transform: translateY(0) !important;
+}
+
+.h1, h2, h3,h4,h5,h6{
+  font-family:'calibri';
+}
+
+.p{
+  font-family: sans-serif;
+}
+.h1,h2,h3,h4,h5,h6 {
+  color:#007A52 ;
+}
